--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="aboutintro">
             <p>I enjoy the process of discovering simple and elegant solutions for complex problems.</p>
-            <p>To make sure the best execution is made, I make every design decision carefully with knowledges and skills I have gained from two Masters degrees and two and a half years working experience in design. </p>
+            <p>To make sure the best execution is made, I make every design decision carefully with knowledge and skills I have gained from two Masters degrees and two and a half years experience working in the design field.</p>
             <h5><a href="images/Amy%20Deng%20CV%202022.pdf" target="_blank">Full CV<i class="las la-arrow-right"></i></a></h5>
         </div>
     </section>
