--- a/therealitalian.html
+++ b/therealitalian.html
@@ -39,7 +39,7 @@
     <section class="twincon">
         <div class="twincondescription">
         <div class="twincontext1">
-            <p>By looking at some facts and data, viewers can get the idea of what Italians are really like — after all, numbers don’t lie.</p>
+            <p>By looking at some facts and data, viewers can get an idea of what Italians are really like — after all, the stats don’t lie.</p>
         </div>
         </div>
         <div class="twinconimg">
