--- a/twinnations.html
+++ b/twinnations.html
@@ -28,16 +28,17 @@
         </div>
         <div class="twin-descrpiton">
             <p class="twin">The problem </p>
-            <p>86% of young travellers chose new culture as their reason for travelling.</p>
-            <p>However, it is hard to go in-depth into local culture as traditional travel guides only cover topics like attractions and restaurants, but hardly show details of local people’s life. </p>
-            <p>How to help young travellers to fully immerse in a new culture? </p>
+            <p>86% of young travellers say that experiencing new cultures is their reason for travelling.</p>
+            <p>However, it is often hard to gain an authentic experience of local cultures as traditional travel guides typically only cover topics like tourist attractions and restaurants, but with little attention paid to the everyday lives of local people.
+ </p>
+            <p>How can we help young travellers fully immerse themselves in a new culture? </p>
         </div>
     </section>
     <section class="container twin2">
         <div class="twin-descrpiton">
             <p class="twin">The solution </p>
-            <p>My solution is an online travel guide that compares the lifestyles of travellers home country and destination country side by side. </p>
-            <p>Because travellers and countries all over the world is such a broad topic, I narrowed it down to Chinese tourists traveling to Italy as an example to answer this question. </p>
+            <p>My solution is an online travel guide that compares the lifestyles of a traveller’s home country and their destination country side by side. </p>
+            <p>Because there is such a wide variety of countries and cultures throughout the world, I have narrowed this down to Chinese tourists travelling to Italy as an example to answer this question. </p>
             <h5><a href="https://projects.invisionapp.com/prototype/ckt5sdywx00hbuf01p9u9lunc/play" target="_blank">Prototype<i class="las la-arrow-right"></i></a></h5>
         </div>
     </section>
@@ -51,7 +52,7 @@
     <section class="twincon">
         <div class="twincondescription">
         <div class="twincontext1">
-            <p>The direction of Twin Nations’ Chinese text is inspired by traditional Chinese writing which is from top to bottom and from right to left, contrasting to its Italian counterpart. </p>
+            <p>The direction of Twin Nations’ Chinese text is inspired by traditional Chinese writing which goes from top to bottom and from right to left, contrasting with its Italian counterpart. </p>
         </div>
         </div>
         <div class="twinconimg">
@@ -73,7 +74,7 @@
         </div>
         <div class="twincondescription">
         <div class="twincontext2">
-            <p>The app is fairy simple to use and has only one main feature, which is the comparison section. Split screen is used to display home country at the top and destination country at the bottom. </p>
+            <p>The app is fairly simple to use since it has only one main feature, which is the comparison section. Split screen is used to display the home country at the top and the destination country at the bottom.  </p>
         </div>
         </div>
     </section>
@@ -105,7 +106,7 @@
         </div>
         <div class="twincondescription">
         <div class="twincontext2">
-            <p>The solution is only for a specific situation where Chinese tourists travel to Italy. That means now any two cultures can be compared borrowing the formula of putting them side by side. Whether it’s the UK versus Malaysia or Greece versus Egypt, the possibilities are endless.  </p>
+            <p>This example is designed a specific situation where a Chinese tourist travel to Italy. By using this formula as a guide, the differences between any two cultures can be compared easily by putting them side by side. Whether it’s Brits travelling to Malaysia or Greeks travelling to Egypt, the possibilities are endless. </p>
         </div>
         </div>
     </section>
