--- a/twinnations.html
+++ b/twinnations.html
@@ -106,7 +106,7 @@
         </div>
         <div class="twincondescription">
         <div class="twincontext2">
-            <p>This example is designed a specific situation where a Chinese tourist travel to Italy. By using this formula as a guide, the differences between any two cultures can be compared easily by putting them side by side. Whether it’s Brits travelling to Malaysia or Greeks travelling to Egypt, the possibilities are endless. </p>
+            <p>This example is designed for a specific situation where a Chinese tourist travel to Italy. By using this formula as a guide, the differences between any two cultures can be compared easily by putting them side by side. Whether it’s Brits travelling to Malaysia or Greeks travelling to Egypt, the possibilities are endless. </p>
         </div>
         </div>
     </section>
